--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,14 +12,14 @@ android {
     }
 
     flavorDimensions "environment"
-    productFlavors{
-        beta{
+    productFlavors {
+        beta {
             buildConfigField "String", "SERVER_ADDRESS", '"http://t96225n7.beget.tech/"'
         }
     }
 
     buildTypes {
-        debug{
+        debug {
 
         }
         release {
@@ -27,11 +27,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
-ext{
+ext {
     supportLibraryVersion = "28.0.0"
     networkPackVersion = "2.5.0"
+    circleImageViewVersion = '3.0.0'
 }
 
 dependencies {
@@ -39,17 +44,18 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "de.hdodenhof:circleimageview:$circleImageViewVersion"
 
+    // Network
     implementation "com.squareup.okhttp:okhttp:$networkPackVersion"
     implementation "com.squareup.retrofit2:retrofit:$networkPackVersion"
     implementation "com.squareup.retrofit2:converter-gson:$networkPackVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$networkPackVersion"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
-
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
